Fixed word wrap in lecture explorer Addresses #37. Layout wraps before title field gets too small. Added ellipsis when lecture is closed.

--- a/styles/sass/base/_variables.scss
+++ b/styles/sass/base/_variables.scss
@@ -20,7 +20,7 @@ $lecture-schedule-padding-top: 40px;
 $lecture-schedule-padding-bottom: 40px;
 $lecture-explorer-max-height: $lecture-schedule-max-height;
 $lecture-explorer-min-height: $lecture-schedule-min-height;
-$lecture-explorer-basis: 250px;
+$lecture-explorer-basis: 300px;
 $lecture-explorer-plan-buttons-height: 25px;
 $lecture-explorer-plans-height: $lecture-schedule-combination-controller-height;
 $flex-spacer-basis: 4px;
